[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "fieldkit"
description = "Verified-on-Spark patterns lifted from the ai-field-notes blog into one importable Python package."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "Manav Sehgal", email = "sehgal.manav@gmail.com" }]
keywords = ["nvidia", "dgx-spark", "nim", "rag", "llm", "agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dynamic = ["version"]
dependencies = [
  "httpx>=0.27",
  "tenacity>=8.5",
  "psycopg[binary]>=3.2",
  "numpy>=1.26",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "respx>=0.21",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.7",
]

[project.scripts]
fieldkit = "fieldkit.cli:app"

[project.urls]
Homepage = "https://ainative.business/fieldkit/"
Source = "https://github.com/manavsehgal/ai-field-notes/tree/main/fieldkit"
Changelog = "https://github.com/manavsehgal/ai-field-notes/blob/main/fieldkit/CHANGELOG.md"
Issues = "https://github.com/manavsehgal/ai-field-notes/issues"

[tool.hatch.version]
path = "src/fieldkit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/fieldkit"]
include = [
  "src/fieldkit/**/*.py",
  "src/fieldkit/**/data/*.json",
]

[tool.hatch.build.targets.sdist]
include = [
  "src/fieldkit",
  "tests",
  "samples",
  "docs",
  "README.md",
  "LICENSE",
  "CHANGELOG.md",
  "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
markers = [
  "spark: integration tests that require live NIM / pgvector on the DGX Spark (deselect with '-m \"not spark\"')",
]
